--- a/style.prefixed.css
+++ b/style.prefixed.css
@@ -6,6 +6,7 @@ body {
 body p {
     word-wrap: break-word; 
     font-family: 'Inconsolata', monospace;
+    display: -ms-flexbox;
     display: flex;
 }
 h1 {
